# project-nrf-air-quality-station

./: README.md
app/: CMakeLists.txt  Kconfig  prj.conf  thread-med.conf
app/boards/: pink_panda.overlay
app/src/: drv_digital_in.c  drv_digital_in.h  drv_digital_out.c  drv_digital_out.h  drv_i2c_master.c  drv_i2c_master.h  drv_name.h  drv_uart.h  ha.c  ha.h  hvac.c  hvac.h  init.c  init.h  main.c  mqtt.c  mqtt.h  openthread.c  openthread.h  reset.c  reset.h  temphum24.c  temphum24.h  uid.c  uid.h
app/src/lib_hvac/: CMakeLists.txt
